01-terraform_lab_exemplos/exercicios/ec2-vpc-sub-sg-gtw/security_group_ssh.tf
resource "aws_security_group" "sg-mamede-terraform-01" {
  name        = "secgrp-mamede-terraform-01"
  description = "Criado pelo terraform 01"
  vpc_id      = aws_vpc.vpc-mamede-terraform-01.id
  ingress = [
    {
      description      = "SSH from VPC"
      from_port        = 22
      to_port          = 22
      protocol         = "tcp"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"]
      prefix_list_ids  = null,
      security_groups  = null,
      self             = null
    }

  ]

  egress = [
    {
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = ["::/0"],
      prefix_list_ids  = null,
      security_groups  = null,
      self             = null,
      description      = "Libera dados da rede interna"
    }
  ]

  tags = {
    Name = "sg-mamede-terraform-01"
  }
}
